# pretix-partial-cancellation

./: MANIFEST.in  README.md  README.rst  justfile  pyproject.toml  setup.cfg
.github/workflows/: release.yml
pretix_partial_cancellation/: __init__.py  apps.py  signals.py  urls.py  views.py
pretix_partial_cancellation/templates/pretixplugins/partial_cancellation/: order_info.html  settings.html
