[metadata]
name = pretix-partial-cancellation
version = 0.1.0
description = Allow customers to partially cancel free orders in pretix
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Alexander Willner
license = AGPL-3.0-or-later
url = https://github.com/AlexanderWillner/pretix-partial-cancellation
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: pretix
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    pretix>=2025.7.0

[options.entry_points]
pretix.plugin =
    partial_cancellation=pretix_partial_cancellation:PretixPluginMeta

[options.packages.find]
exclude =
    tests
    tests.*
